--- a/style.css
+++ b/style.css
@@ -65,9 +65,16 @@ li {
 .row {
   width: 100%;
   max: width 1300px;
+  margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+#about,
+#discord,
+#contact footer {
+  padding: 48px 0;
 }
 
 /*
@@ -75,9 +82,7 @@ li {
 ABOUT
 
 */
-
 #about {
-  padding: 48px 0;
   background-color: #f8ffdc;
 }
 
@@ -95,7 +100,7 @@ h2 {
 
 .about__img--wrapper {
   width: 40%;
-  padding: 0 24px
+  padding: 0 24px;
 }
 
 img {
@@ -110,4 +115,127 @@ img {
   font-size: 20px;
   line-height: 1.5;
   margin-bottom: 24px;
+}
+
+/*
+
+DISCORD
+
+*/
+
+#discord {
+  background-color: #cefeff;
+}
+
+/*
+
+CONTACT
+
+*/
+
+#contact {
+  background-color: #dce9ff;
+}
+
+form {
+  width: 100%;
+  max-width: 600px;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  padding: 0 24px;
+}
+
+input,
+textarea {
+  margin-bottom: 24px;
+  font-size: 20px;
+  padding: 6px 12px;
+}
+
+/*
+
+FOOTER
+
+*/
+
+footer {
+  background-color: #aaf5ff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer__logo {
+  max-width: 480px;
+}
+
+.footer__links {
+  margin-bottom: 32px;
+}
+
+.footer__link {
+  padding: 0 16px;
+}
+
+/* SMALL PHONES, TABLETS, LARGE SMARTPHONES */
+@media (max-width: 728px) {
+  .row {
+    flex-direction: column;
+  }
+
+  .home__description {
+    margin-bottom: 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .home__description--button {
+    max-width: 240px;
+  }
+
+  h1 {
+    text-align: center;
+    font-size: 60px;
+  }
+
+  .subheader {
+    text-align: center;
+    font-size: 28px;
+  }
+
+  ul {
+    display: none;
+  }
+
+  .section__description {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .about__img--wrapper {
+    width: 100%;
+  }
+
+  #discord .section__description {
+    flex-direction: column-reverse;
+  }
+
+  .footer__logo {
+    padding: 48px 24px;
+  }
+
+  .footer__logo {
+    max-width: 360px;
+  }
+
+  .footer__link {
+    padding: 8px 4px;
+    font-size: 18px;
+  }
+
+  .footer__link {
+    margin-bottom: 24px;
+  }
 }
